--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "grunt-less-module-branding",
-  "description": "Process brand module less",
+  "name": "grunt-less-branding",
+  "description": "Process branded LESS",
   "version": "1.0.0",
   "homepage": "",
   "author": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "aaa"
+    "url": "https://github.com/holidayextras/grunt-less-branding.git"
   },
   "bugs": {
     "url": ""
